name:                dabus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/TheWizardTower/dabus#readme
license:             BSD3
license-file:        LICENSE
author:              Adam McCullough
maintainer:          merlinfmct87@gmail.com
copyright:           (c) 2018 Adam McCullough
category:            configuration-management
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dabus
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , dhall
                     , optparse-applicative
